--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Home Page</title>
 </head>
 <body>
-    This is my homepage 
+    This is my homepage
+    <a href="loading.html">this is my loading page.</a>
+    <a href="search.html">this is my search page.</a>
 </body>
 </html>
