Fri, Feb 27, 2026, 9:35 AM -08:00

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     This is my homepage
     <a href="loading.html">this is my loading page.</a>
     <a href="search.html">this is my search page.</a>
+    <a href="red.html">This is my red page.</a>
 </body>
 </html>
