Fri, Feb 27, 2026, 9:47 AM -08:00

--- a/expanding.html
+++ b/expanding.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="style/expanding.css">
 </head>
 <body>
-    
-
+    <div class="container">
+        
+    </div>
     <script src="script/expanding.js"></script>
 </body>
 </html>
