Fri, Feb 27, 2026, 9:53 AM -08:00

--- a/expanding.html
+++ b/expanding.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        
+        <div class="planel"></div>
     </div>
     <script src="script/expanding.js"></script>
 </body>
