Fri, Feb 27, 2026, 9:57 AM -08:00

--- a/expanding.html
+++ b/expanding.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <div class="planel"></div>
+        <div class="planel" style= "backround-image: url('images/piza.avif')"></div>
+        <h3>PIZZA</h3>
     </div>
     <script src="script/expanding.js"></script>
 </body>
