Fri, Feb 27, 2026, 10:00 AM -08:00

--- a/expanding.html
+++ b/expanding.html
@@ -9,7 +9,22 @@
 <body>
     <div class="container">
         <div class="planel" style= "backround-image: url('images/piza.avif')"></div>
-        <h3>PIZZA</h3>
+        <h3>PIZZA YUMMY</h3>
+    </div>
+        <div class="planel" style= "backround-image: url('images/pasta.avif')"></div>
+        <h3>PASTA TO FEAST</h3>
+    </div>
+        </div>
+        <div class="planel" style= "backround-image: url('images/noodle.avif')"></div>
+        <h3>NOODLES 4 ME</h3>
+    </div>
+        </div>
+        <div class="planel" style= "backround-image: url('images/burgar.avif')"></div>
+        <h3>BURGAR TO EAT</h3>
+    </div>
+        </div>
+        <div class="planel" style= "backround-image: url('images/bbq.avif')"></div>
+        <h3>BBQ MEAT</h3>
     </div>
     <script src="script/expanding.js"></script>
 </body>
