--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <a href="loading.html">this is my loading page.</a>
     <a href="search.html">this is my search page.</a>
     <a href="red.html">This is my red page.</a>
+    <a href="expanding.html">My food page</a>
 </body>
 </html>
